ADD signup activity to manifest and defined it as the launcher activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".Activities.MainActivity">
+        </activity>
+        <activity android:name=".Authentication.SignUpActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
