--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,12 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.3.1'
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.android.support:support-v4:25.3.1'
-    }
+    compile 'com.squareup.picasso:picasso:2.3.3'
+    compile 'com.pes.materialcolorpicker:library:1.2.0'
+    compile 'com.android.support:percent:25.3.1'
+    compile 'de.hdodenhof:circleimageview:1.3.0'
+}
 
 apply plugin: 'com.google.gms.google-services'
+
 
