UPDATE MapFragment methods to display and retrieve data from firebase db, alert dialog when recording ...  ADD Service (?) to store user location ADD methods to compute and format distances (Utils)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,8 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
+        <service android:name=".Services.RecordUserLocationService"></service>
+
         <activity
             android:name=".Activities.MainActivity"
             android:hardwareAccelerated="true"/>
