--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,9 @@
         </activity>
         <activity android:name=".authentication.AccountSettingsActivity"></activity>
         <activity android:name=".authentication.SignUpActivity" />
-        <activity android:name=".authentication.LoginActivity">
+        <activity
+            android:name=".authentication.LoginActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
